# projet_opendata_IA

./: .env.example  .gitignore  COLOR_PALETTE_GUIDE.md  DESIGN_QUICK_START.md  DESIGN_UPDATES.md  README.md  app.py  env.example  env.example.txt  main.py  pyproject.toml
.github/: copilot-instructions.md
.streamlit/: config.toml
docs/: 06_SUJETS_PROJET.md
tests/: tests_chatbot.py  tests_data.py
utils/: charts.py  chatbot.py  data.py
